# uwu

./: .gitignore  README.md  install.ps1  install.py  install.sh  pyproject.toml
.github/workflows/: release.yml
examples/: fizzbuzz.uwu  hello.uwu  reassign.uwu
runtime/: Cargo.toml
runtime/src/: ast.rs  lexer.rs  main.rs  parser.rs  runtime.rs  token.rs
src/meridian/: __init__.py  ast_nodes.py  bytecode.py  cli.py  compiler.py  errors.py  lexer.py  parser.py  tokens.py  types.py  vm.py
src/uwu/: __init__.py  ast_nodes.py  bytecode.py  cli.py  compiler.py  errors.py  lexer.py  parser.py  tokens.py  vm.py
wiki/: Examples.md  Getting-Started.md  Home.md  Installation.md  Language-Reference.md
