[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uwu-lang"
dynamic = ["version"]
description = "UWU language prototype: lexer, parser, compiler, and bytecode VM"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "UWU Authors"}
]

[project.scripts]
paws = "uwu.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "uwu.__version__"}
